--- a/package.xml
+++ b/package.xml
@@ -14,7 +14,9 @@
   <exec_depend>time</exec_depend>
   <exec_depend>cv2</exec_depend>
   <exec_depend>struct</exec_depend>
+  <exec_depend>torch</exec_depend>
   <exec_depend>numpy</exec_depend>
+  <exec_depend>threading</exec_depend>
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
