--- a/package.xml
+++ b/package.xml
@@ -4,8 +4,9 @@
   <name>detection_node</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="auto@todo.todo">auto</maintainer>
+  <maintainer email="roboto.polito@gmail.com">auto</maintainer>
   <license>TODO: License declaration</license>
+
   <exec_depend>rclpy</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
@@ -19,15 +20,14 @@
   <exec_depend>threading</exec_depend>
   <exec_depend>pickletools</exec_depend>
   <exec_depend>serial</exec_depend>
-  <exec_depend>matplotlib<exec_depend>
+  <exec_depend>matplotlib</exec_depend>
   <exec_depend>serial_class</exec_depend>
   <exec_depend>struct</exec_depend>
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
-  
-  
+
   <export>
     <build_type>ament_python</build_type>
   </export>
