--- a/package.xml
+++ b/package.xml
@@ -10,6 +10,7 @@
   <exec_depend>rclpy</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>ultralytics</exec_depend>
   <exec_depend>time</exec_depend>
@@ -24,6 +25,7 @@
   <exec_depend>serial_class</exec_depend>
   <exec_depend>struct</exec_depend>
   <exec_depend>ros2launch</exec_depend>
+  <exec_depend>ros2_numpy</exec_depend>
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
